fix countdown on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,13 @@ main>div:not(:first-child) {
     font-size: 2rem;
 }
 
+.countdown-timer {
+    font-family: "Poppins";
+    font-weight: bold;
+    font-size: 45px;
+    margin-bottom: 100px;
+}
+
 .date {
     color: #d2bfff;
     font-size: 1.5rem;
@@ -137,7 +144,12 @@ main>div:not(:first-child) {
     .title-holder p,
     .title-holder h1
     .title-holder h2 {
-        margin: 0 1rem;
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
+
+    .countdown-timer {
+        width: 95%;
     }
 }
 
@@ -221,7 +233,8 @@ main>div:not(:first-child) {
 
 @media (max-width: 768px) {
     .sponsor-holder * {
-        margin: 0 1rem;
+        margin-left: 1rem;
+        margin-right: 1rem;
     }
 
     .sponsor-button {
@@ -235,13 +248,6 @@ main>div:not(:first-child) {
     margin-bottom: 10px;
     margin-left: 10px;
     margin-right: 10px;
-}
-
-.countdown-timer {
-    font-family: "Poppins";
-    font-weight: bold;
-    font-size: 45px;
-    margin-bottom: 100px;
 }
 
 .pink {
